[package]
name = "ccl"
version = "5.1.5"
authors = ["acrimon <joel.wejdenstal@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://gitlab.nebulanet.cc/xacrimon/ccl"
homepage = "https://gitlab.nebulanet.cc/xacrimon/ccl"
description = "Fast datastructures for use in highly concurrent systems."
readme = "README.md"
documentation = "https://docs.rs/ccl"
keywords = ["atomic", "concurrent", "map", "parallel", "hashmap"]
categories = ["concurrency", "algorithms", "data-structures"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/registry/src/github.com-1ecc6299db9ec823/pwnies-0.0.14/pwnies.html"]

[features]
nightly = ["parking_lot/nightly", "hashbrown/nightly", "ccl-crossbeam-epoch/nightly"]

[dependencies]
hashbrown = "0.6.0"
parking_lot = { version = "0.9.0", features = ["owning_ref"] }
rand = "0.7.0"
num_cpus = "1.10.1"
ccl-crossbeam-epoch = { path = "lib/ccl-crossbeam-epoch", version = "0.7.4" }
seahash = "3.0.6"
owning_ref = "0.4.0"
slab = "0.4.2"
stable_deref_trait = "1.1.1"
futures-preview = "=0.3.0-alpha.18"

[dev-dependencies]
rayon = "1.1.0"
