[package]
name = "dpb_kem"
version = "0.2.0"
authors = ["Thomas Braun <thomas.braun@avarok.net>"]
edition = "2021"
workspace = ".."
homepage = "https://avarok.net/"
repository = "https://github.com/Avarok-Cybersecurity/Citadel-Protocol"
readme = "../README.md"
categories = ["cryptography", "post-quantum", "quantum", "network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
