[package]
name = "ez_pqcrypto"
version = "0.1.1"
authors = ["Thomas Braun <tbraun96@gmail.com>"]
edition = "2018"
description = "Abstracts over pqcrypto. Allows selecting a post-quantum KEM algorithm by setting a single byte-sized value. Useful for multi-algorithmic or nondeterministic schemes"
readme = "README.md"
homepage = "https://thomaspbraun.com/"
repository = "https://github.com/tbraun96/ez_pqcrypto/"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [
    "./target/*"
]

[features]
default = ["unordered"]
unordered = ["parking_lot"]

[dependencies]
generic-array = { version = "0.14.5", features = ["serde"]}
lazy_static = "1.4.0"
enum_primitive = "0.1.1"
serde = { version = "1.0.135", features = ["derive"] }
#serde_traitobject = "0.2.7"
typetag = "0.1.8"
bincode2 = "2.0.1"
aes-gcm-siv = { version = "0.10.3", features = ["heapless"]}
chacha20poly1305 = { version = "0.9.0", features = ["heapless"] }
bytes = "1.1.0"
#circular-queue = { version = "*", features = ["serde_support"], optional = true }
parking_lot = { version = "0.11.2", features = ["serde"], optional = true }
log = { version = "0.4.14", features = ["std", "max_level_info", "release_max_level_info"] }
strum = { version = "0.23.0", features = ["derive"] }
sha3 = "0.10.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
oqs = { version = "0.7.1", default-features = false, features = ["std", "serde", "saber", "kyber", "sidh", "sike", "ntru"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
oqs = { version = "0.7.1", default-features = false, features = ["non_portable", "serde", "saber", "kyber", "sidh", "sike", "ntru"] }

[dev-dependencies]
rand = "0.8.4"
env_logger = "0.9.0"
criterion = "0.3.5"
#rust-sike = "0.2.0"

[[bench]]
name = "test"
harness = false

[lib]
doctest = false
