[package]
name = "ez_pqcrypto"
version = "0.1.1"
authors = ["Thomas Braun <tbraun96@gmail.com>"]
edition = "2018"
description = "Abstracts over pqcrypto. Allows selecting a post-quantum KEM algorithm by setting a single byte-sized value. Useful for multi-algorithmic or nondeterministic schemes"
readme = "README.md"
homepage = "https://thomaspbraun.com/"
repository = "https://github.com/tbraun96/ez_pqcrypto/"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [
    "./target/*"
]

[dependencies]
generic-array = { version = "0.14.5", features = ["serde"]}
lazy_static = "1.4.0"
enum_primitive = "0.1.1"
serde = { version = "1.0.135", features = ["derive", "rc"] }
#serde_traitobject = "0.2.7"
bincode2 = "2.0.1"
aes-gcm-siv = { version = "0.11.1", features = ["heapless"]}
chacha20poly1305 = { version = "0.10.1", features = ["heapless"] }
bytes = "1.1.0"
#circular-queue = { version = "*", features = ["serde_support"], optional = true }
parking_lot = { version = "0.12.0", features = ["serde"] }
log = "0.4.8"
strum = { version = "0.24.0", features = ["derive"] }
sha3 = "0.10.1"
oqs = { git = "https://github.com/open-quantum-safe/liboqs-rust.git", default-features = false, features = ["std", "serde", "saber", "kyber", "ntru", "falcon"] }
kyber-pke = { git = "https://github.com/Avarok-Cybersecurity/kyber-pke", branch = "master" }
#pqcrypto = { git = "https://github.com/rustpq/pqcrypto.git", default-features = false, features = ["pqcrypto-saber", "pqcrypto-kyber", "pqcrypto-ntru"]}
#typetag = "0.1.8"
byteorder = "1.4.3"

[dev-dependencies]
rand = "0.8.4"
lusna_logging = { path = "../lusna_logging", version = "0.1.0" }

[lib]
doctest = false
