[package]
name = "firebase-rtdb"
version = "0.1.0"
authors = ["Thomas Braun <thomas.braun@avarok.net>"]
edition = "2021"
workspace = ".."
homepage = "https://avarok.net/"
repository = "https://github.com/Avarok-Cybersecurity/Citadel-Protocol"
readme = "../README.md"
categories = ["cryptography", "post-quantum", "quantum", "network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["native-tls-vendored", "json", "serde_json"] }
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.24", features = ["full"] }
citadel_logging = { path = "../citadel_logging", version = "0.1.0" }
