[package]
name = "firebase-rtdb"
version = "0.4.0"
authors = ["Thomas Braun <thomas.braun@avarok.net>"]
description = "Firebase client for the Citadel Protocol"
edition = "2021"
workspace = ".."
homepage = "https://avarok.net/"
repository = "https://github.com/Avarok-Cybersecurity/Citadel-Protocol"
readme = "../README.md"
categories = ["cryptography", "post-quantum", "quantum", "network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { workspace = true, features = ["rustls", "rustls-native-certs", "rustls-tls", "json", "serde_json"] }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
citadel_logging = { workspace = true }
