[package]
name = "firebase-rtdb"
version = "0.11.3"
authors = ["Thomas Braun <thomas.braun@avarok.net>"]
description = "Firebase client for the Citadel Protocol"
edition = "2021"
workspace = ".."
homepage = "https://avarok.net/"
repository = "https://github.com/Avarok-Cybersecurity/Citadel-Protocol"
readme = "../README.md"
categories = ["cryptography", "network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { workspace = true, features = ["rustls-tls-native-roots", "rustls-tls", "json"] }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
citadel_io = { workspace = true }
citadel_logging = { workspace = true }
