[package]
name = "hyxe_config"
version = "0.1.0"
authors = ["Thomas Braun <tbraun96@gmail.com>"]
edition = "2018"
workspace = "../"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["fs"] }
log = { version = "0.4.8", features = ["max_level_trace", "release_max_level_warn"] }
env_logger = "0.7.1"