[package]
name = "hyxe_crypt"
version = "0.1.0"
authors = ["Thomas Braun <tbraun96@gmail.com>"]
edition = "2018"
workspace = "../"
license-file = "../LICENSE-COMMERCIAL-USE.pdf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [
    "./target/*"
]

[features]
default = ["single-threaded"]
single-threaded = ["ez_pqcrypto/unordered"]
multi-threaded = ["ez_pqcrypto/unordered"]

[dependencies]
async-trait = "0.1.24"
bincode2 = "2.0.1"
serde = { version="1.0.104", features=["rc", "derive"] }
serde_derive = "1.0.104"
#futures-preview = { version = "=0.3.0-alpha.19", features = ["compat", "async-await"]}
futures = "0.3.5"
log = { version = "0.4.8", features = ["std", "max_level_trace", "release_max_level_error"] }
zerocopy = "0.5.0"
byteorder = "1.3.2"
bytes = { version = "^1.0.1", features = ["serde"] }
num-integer = "0.1.43"
rand = "0.7.0"
rayon = "1.5.1"
arrayvec = { version = "0.7.0", features = ["serde"] }
ez_pqcrypto = { path = "../ez_pqcrypto", version = "0.1.1", default-features=false }
#fcm = { path = "../fcm-rust", version = "0.8.1" }
bitvec = "0.17.4"
serde-big-array = "0.3.0"
rust-argon2 = "1.0.0"
sysinfo = "0.18.2"
num_cpus = "1.13.0"
linked-hash-map = "*"
tokio = { version = "1.10.1", features = ["full"] }
sha3 = "0.10.1"

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2.80"

[target.'cfg(target_os = "windows")'.dependencies]
kernel32-sys = "0.2.2"

[dev-dependencies]
criterion = "*"
env_logger = "0.8.2"


[lib]
doctest = false