[package]
name = "hyxe_crypt"
version = "0.1.0"
authors = ["Thomas Braun <tbraun96@gmail.com>"]
edition = "2018"
workspace = "../"
license-file = "../LICENSE-COMMERCIAL-USE.pdf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [
    "./target/*"
]

[features]
default = ["filesystem"]
filesystem = []

[dependencies]
async-trait = "0.1.24"
bincode2 = "2.0.1"
serde = { version="1.0.104", features=["rc", "derive"] }
futures = "0.3.5"
log = "0.4.8"
byteorder = "1.3.2"
bytes = { version = "^1.0.1", features = ["serde"] }
num-integer = "0.1.43"
rand = "0.8.5"
rayon = "1.5.1"
arrayvec = { version = "0.7.0", features = ["serde"] }
ez_pqcrypto = { path = "../ez_pqcrypto", version = "0.1.1", default-features=false }
#fcm = { path = "../fcm-rust", version = "0.8.1" }
bitvec = "1.0.0"
serde-big-array = "0.4.1"
rust-argon2 = "1.0.0"
sysinfo = "0.23.2"
num_cpus = "1.13.0"
linked-hash-map = "*"
tokio = { version = "=1.20.1", features = ["full"] }
sha3 = "0.10.1"
parking_lot = "0.12.1"
tokio-stream = "0.1.7"
auto_impl = "1.0.1"

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2.80"

[target.'cfg(target_os = "windows")'.dependencies]
kernel32-sys = "0.2.2"

[dev-dependencies]
lusna_logging = { path = "../lusna_logging", version = "0.1.0" }
rstest = { git = "https://github.com/la10736/rstest", branch="master" }


[lib]
doctest = false