[package]
name = "hyxe_derive"
version = "0.1.0"
authors = ["Thomas Braun <tbraun96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [
    "./target/*"
]

[dependencies]
syn = "*"
quote = "*"

[lib]
proc-macro = true