[package]
name = "hyxe_fs"
version = "0.1.0"
authors = ["Thomas Braun <tbraun96@gmail.com>"]
edition = "2018"
workspace = "../"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.3.0"
#flate3 = "0.1.20"
pin-project = "0.4.23"
dirs-2 = "1.1.0"
serde = { version = "1.0.104", features = ["derive", "rc"] }
bincode2 = "2.0.1"
async-trait = "0.1.11"
num-bigint = "0.3.0"
num = "*"
chrono = "0.4.7"
rand = "0.7.0"
zerocopy = "0.2.8"
bytes = "0.5.4"
futures = "0.3.5"
#futures-preview = { version = "=0.3.0-alpha.19", features = ["compat", "async-await"]}
log = { version = "0.4.8", features = ["std", "max_level_trace", "release_max_level_error"] }
tokio = { version = "^0.2.22", features = ["fs", "rt-threaded", "macros"] }
hyxe_crypt = { path = "../hyxe_crypt", version = "0.1.0" }

[dev-dependencies]
byteorder = "*"