[package]
name = "hyxe_fs"
version = "0.1.0"
authors = ["Thomas Braun <tbraun96@gmail.com>"]
edition = "2018"
workspace = "../"
license-file = "../LICENSE-COMMERCIAL-USE.pdf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#flate3 = "0.1.20"
dirs-2 = "1.1.0"
serde = { version = "1.0.104", features = ["derive", "rc"] }
bincode2 = "2.0.1"
async-trait = "0.1.11"
num-bigint = "0.4.3"
num = "*"
chrono = "0.4.7"
rand = "0.7.0"
zerocopy = "0.5.0"
bytes = "^1.0.1"
futures = "0.3.8"
#futures-preview = { version = "=0.3.0-alpha.19", features = ["compat", "async-await"]}
log = { version = "0.4.8", features = ["std"] }
#tokio = { version = "^0.2.22", features = ["fs", "rt-threaded", "macros", "sync", "stream"] }
tokio = { version = "1.10.1", features = ["fs", "macros"] }
tokio-stream = "0.1.7"
hyxe_crypt = { path = "../hyxe_crypt", version = "0.1.0" }
parking_lot = "0.11.0"

[dev-dependencies]
byteorder = "*"
env_logger = "0.8.2"


[lib]
doctest = false