[package]
name = "hyxe_nat"
version = "0.1.0"
authors = ["Thomas Braun <tbraun96@gmail.com>"]
edition = "2018"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
igd = { path = "./rust-igd", features = ["aio"] }
tokio = { version = "^0.2.22", features = ["macros", "rt-util", "time", "net"] }
futures = "0.3.8"
async-trait = "0.1.36"
bytes = "0.5.6"
byteorder = "1.3.4"
rsntp = { path = "../rsntp", features = ["async"], version = "1.0.1" }
whoami = "0.9.0"
arc-swap = "0.4.7"

log = { version = "0.4.8", features = ["std", "max_level_trace", "release_max_level_info"] }

[dev-dependencies]
net2 = "0.2.34"
env_logger = "0.7.1"
