[package]
name = "hyxe_nat"
version = "0.1.0"
authors = ["Thomas Braun <tbraun96@gmail.com>"]
edition = "2018"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
igd = { version = "^0.12.0", features = ["aio"] }
#tokio = { version = "^0.2.22", features = ["macros", "rt-util", "time", "net"] }
tokio = "^1.2.0"
tokio-stream = "0.1.3"
futures = "0.3.8"
async-trait = "0.1.36"
bytes = "^1.0.1"
byteorder = "1.3.4"
#rsntp = { path = "../rsntp", features = ["async"], version = "2.0.0" }
rsntp = { version = "2.0.0", features = ["async"] }
whoami = "0.9.0"
arc-swap = "0.4.7"
parking_lot = "0.11.1"
stun = "0.3.0"
net2 = "0.2.37"
anyhow = "1.0.42"
serde = { version = "1.0.126", features = ["derive"]}
log = { version = "0.4.8", features = ["std", "max_level_info", "release_max_level_info"] }
bincode2 = "2.0.1"
async_ip = { path = "../async_ip", version = "0.1.0" }
quinn = "0.7.2"
rcgen = "0.8.11"

[dev-dependencies]
net2 = "0.2.34"
env_logger = "0.7.1"
