[package]
name = "hyxe_nat"
version = "0.1.0"
authors = ["Thomas Braun <tbraun96@gmail.com>"]
edition = "2018"
workspace = ".."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
localhost-testing = []

[dependencies]
igd = { version = "^0.12.0", features = ["aio"] }
#tokio = { version = "^0.2.22", features = ["macros", "rt-util", "time", "net"] }
tokio = "1.10.1"
tokio-stream = "0.1.7"
futures = "0.3.16"
async-trait = "0.1.36"
bytes = "^1.0.1"
byteorder = "1.3.4"
#rsntp = { path = "../rsntp", features = ["async"], version = "2.0.0" }
rsntp = { version = "2.0.0", features = ["async"] }
whoami = "0.9.0"
parking_lot = "0.11.1"
stun = "0.3.3"
#socket2 = "0.4.1"
net2 = "0.2.37"
anyhow = "1.0.42"
serde = { version = "1.0.126", features = ["derive"]}
log = { version = "0.4.8", features = ["std", "max_level_info", "release_max_level_info"] }
bincode2 = "2.0.1"
async_ip = { path = "../async_ip", version = "0.1.0" }
quinn = { version = "0.7.2", features = ["rustls"] }
webpki = "0.21.0"
rustls = { version = "0.19.1", features = ["quic", "dangerous_configuration"] }
rcgen = "0.8.11"
openssl = { version = "0.10.36", features = ["vendored"] }
either = "1.6.1"
tokio-rustls = "0.22.0"

netbeam = { path = "../netbeam", version = "0.1.0" }

[dev-dependencies]
env_logger = "0.7.1"
parking_lot = { version = "0.11.1", features = ["deadlock_detection"] }
rand = "0.8.4"
tokio-util = "0.6.7"

[lib]
doctest = false