[package]
name = "hyxe_net"
version = "0.1.0"
authors = ["Thomas Braun <tbraun96@gmail.com>"]
edition = "2018"
workspace = "../"

[features]
default = ["single-threaded"]
single-threaded = ["ez_pqcrypto/aes", "hyxe_crypt/single-threaded"]
multi-threaded = ["ez_pqcrypto/aes", "ez_pqcrypto/unordered", "hyxe_crypt/multi-threaded"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#futures = { version = "0.3.1", features = ["compat", "async-await"] }
futures = "0.3.5"
#rav1e = {version = "0.4.0-alpha", default-features=false, features = ["binaries", "signal_support"]}
bstr = "0.2.13"
log = { version = "0.4.8", features = ["std", "max_level_info", "release_max_level_info"] }
async-trait = "0.1.31"
tokio-util = { version = "0.3.1", features = ["udp", "codec"] }
tokio = { version = "^0.2.22", features = ["full"] }
parking_lot = "*"
zerocopy = "0.3.0"
bytes = "0.5.6"
byteorder = "1.3.4"
nanoserde = "0.1.18"
rand = "0.7.3"
atomic = "0.5.0"
secstr = { version = "0.4.0", features=["serde"] }
bincode2 = "2.0.1"
serde = { version = "1.0.104", features=["derive"] }
net2 = "0.2.34"
num = "0.2.1"
either = "1.5.3"
bitvec = "0.17.3"
hyxe_crypt = { path = "../hyxe_crypt", version = "0.1.0", default-features=false }
hyxe_user = { path = "../hyxe_user", version = "0.1.0" }
hyxe_nat = { path = "../hyxe_nat", version = "0.1.0" }
hyxe_fs = { path = "../hyxe_fs", version = "0.1.0" }
ez_pqcrypto = { path = "../ez_pqcrypto", version = "0.1.1", default-features=false }
rust-argon2 = "0.8.3"
num_cpus = "1.13.0"


[dev-dependencies]
env_logger = "0.8.2"