[package]
name = "hyxe_net"
version = "0.1.0"
authors = ["Thomas Braun <tbraun96@gmail.com>"]
edition = "2018"
workspace = "../"
license-file = "../LICENSE-COMMERCIAL-USE.pdf"

[features]
default = ["filesystem"]
filesystem = ["hyxe_user/filesystem"]
single-threaded = ["ez_pqcrypto/unordered", "hyxe_crypt/single-threaded", "hyxe_user/single-threaded"]
multi-threaded = ["ez_pqcrypto/unordered", "hyxe_crypt/multi-threaded", "hyxe_user/multi-threaded"]
sql = ["hyxe_user/sql"]
redis = ["hyxe_user/redis"]
webrtc = ["webrtc-util"]
localhost-testing = ["hyxe_wire/localhost-testing", "hyxe_user/localhost-testing", "tracing"]
localhost-testing-assert-no-proxy = ["localhost-testing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#futures = { version = "0.3.1", features = ["compat", "async-await"] }
futures = "0.3.12"
#rav1e = {version = "0.4.0-alpha", default-features=false, features = ["binaries", "signal_support"]}
log = "0.4.8"
async-trait = "0.1.56"
tokio-util = { version = "0.7.2", features = ["net", "codec", "time", "io"] }
tokio = { version = "1.19.0", features = ["full"] }
auto_impl = "1.0.1"
tokio-stream = "0.1.7"
parking_lot = "0.12.0"
zerocopy = "0.6.1"
#bytes = "0.5.6"
bytes = {version = "^1.0.1", features = ["serde"]}
byteorder = "1.3.4"
atomic = "0.5.0"
serde = { version = "^1.0.123", features=["derive"] }
anyhow = "1.0.57"
either = "1.5.3"
async-stream = "0.3.2"
hyxe_crypt = { path = "../hyxe_crypt", version = "0.1.0", default-features=false }
hyxe_user = { path = "../hyxe_user", version = "0.1.0", default-features=false }
hyxe_wire = { path = "../hyxe_wire", version = "0.1.0" }
ez_pqcrypto = { path = "../ez_pqcrypto", version = "0.1.1", default-features=false }
netbeam = { path = "../netbeam", version = "0.1.0" }
#tokio-native-tls = "0.3.0"
#native-tls = { version = "0.2.7", features = ["vendored"] }
once_cell = "1.13.0"
webrtc-util = {version = "0.5.3", optional = true }
uuid = { version = "1.0.0-alpha.1", features = ["serde", "v4"] }
itertools = "0.10.3"
tracing = { git = "https://github.com/tokio-rs/tracing.git", branch = "v0.1.x", optional = true }
#libp2p = { version = "0.43.0", default-features=false, features = ["tcp-tokio", "serde"] }



[dev-dependencies]
lusna_logging = { path = "../lusna_logging", version = "0.1.0" }
tracing = { git = "https://github.com/tokio-rs/tracing.git", branch = "v0.1.x" }
ureq = "2.4.0"
rand = "0.8.5"
rstest = { git = "https://github.com/la10736/rstest", branch="master" }

[lib]
doctest = false